<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/quiz_bottom"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/re_head"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:background="@color/decorate_blue">

        <RelativeLayout
            android:id="@+id/rl_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_back_button"
            android:clickable="true"
            android:padding="5dp"
            android:visibility="visible">

            <ImageButton
                android:layout_width="@dimen/left_arrow"
                android:layout_height="@dimen/left_arrow"
                android:layout_centerVertical="true"
                android:background="@null"
                android:clickable="false"
                android:scaleType="fitCenter"
                android:src="@mipmap/go_back" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/serverdish_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rl_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_back_button"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:text="添加"
                android:textColor="@color/white" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_dish_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_edit"
            android:hint="@string/serverdish_search_hint"
            android:padding="@dimen/padding_5" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginLeft="@dimen/margin_5"
            android:background="@color/decorate_blue"
            android:text="@string/serverdish_search"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_server_dish"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_5" />

</LinearLayout>